# valvepak-navigator

./: .gitignore  COPYING  Cargo.toml  README.md  meson.build
data/: app.desktop  meson.build
scripts/: meson-install.sh
src/: app.gresource.xml  app.gresource.xml.in  application.rs  config.rs.in  main.rs  main_window.rs  meson.build
src/gtk/: style-dark.css  style.css  window.blp
src/models/: archive.rs
