[package]
name = "valvepak-navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
tracing = "0.1"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
