install_data(
  'icons' / 'hicolor' / 'scalable' / 'apps' / 'com.github.kinten108101.ValvePakNavigator.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

configure_file(
  input: 'app.desktop',
  output: 'com.github.kinten108101.ValvePakNavigator.desktop',
  copy: true,
  install_dir: get_option('prefix') / get_option('datadir') / 'applications',
)